# qLDPCsim

./: README.md  pyproject.toml  qLDPClib.py
data/: Hx_5qb.npy  Hz_LP04_2.npy  Hz_LP04_3.npy  Hz_T.npy
logo/: qLDPCsim_logo.blg  qLDPCsim_logo.tex
qLDPCsim/: Hx_LP04_2.npy  Hx_LP118_1.npy  Hx_LP118_2.npy  Hx_T.npy  Hz_LP118_0.npy  LICENSE  PCMlibrary.py  __init__.py  decoders.py  gf2math.py  simulate.py  simulator.py  stimEncoder.py  version.py
src/: Hx.npy  Hx_LP118_0.npy  Hz_LP118_0.npy
src/qLDPCsim/: Hx_LP04_0.npy  Hx_LP04_1.npy  Hx_LP04_3.npy  Hx_LP04a_0.npy  Hx_LP04b_0.npy  Hx_LP118_0.npy  Hz_5qb.npy  Hz_LP04_0.npy  Hz_LP04_1.npy  Hz_LP04a_0.npy  Hz_LP04b_0.npy  Hz_LP118_1.npy  Hz_LP118_2.npy  Hz_steane.npy  LICENSE  PCMlibrary.py  decoders.py  gf2math.py  logical_ops_css.py  logical_ops_from_checks.py  pyproject.toml  qLDPClib.py  setup.py  simulate.py  stimEncoder.py
